--- a/lab3/style.css
+++ b/lab3/style.css
@@ -14,8 +14,10 @@
 }
 
 .body {
-    height: 600px;
+    height: 900px;
     width: 100%;
+    font-family: sans-serif;
+    background-color: #eee;
 }
 
 .header h1 {
@@ -24,6 +26,7 @@
 }
 
 .vertical-menu {
+    margin-left: 10%;
     width: 200px;
     /* Set a width if you like */
     height: 250px;
@@ -55,8 +58,8 @@
 }
 
 .content {
-    height: 100%;
-    width: 70%;
+    height: 850px;
+    width: 50%;
     background-color: #eee;
     /* Grey background color */
     color: black;
@@ -70,23 +73,35 @@
 }
 
 .chatbox {
-    margin-top: 28%;
+    margin-top: 45%;
     float: left;
     width: 200px;
     height: 200px;
     background-color: #eee;
+    border: 1px solid white;
+    border-radius: 5px;
+    background-color: white;
+    vertical-align: middle;
+    text-align: center;
 }
 
 .chatbox p {
-    vertical-align: middle;
-    text-align: center;
-    margin-top: 30%;
-}
-
-.footer {
-    padding-top: 10px;
+    
+   margin-top: 30px;
     width: 100%;
     height: 50px;
+}
+.chatbox img{
+    align-items: center;
+   margin-bottom: 100px;
+    position: inherit;
+    
+}
+.footer {
+   
+    width: 100%;
+    height: 40px;
+    float: left;
     background-color: #eee;
     /* Grey background color */
     color: black;
@@ -97,4 +112,37 @@
 .footer p {
     vertical-align: middle;
     text-align: center;
+}
+.main {
+    border: 1px solid #eee;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    border-radius: 5px;
+ 
+}
+.text {
+    margin: 10px;
+   width: 100%;
+}
+.read1{
+    font-size: 25px;
+}
+.read{
+    margin: 10px 0;
+    padding: 5px;
+    writing-mode: horizontal-tb;
+    word-break: keep-all;
+    width: 95%;
+    height: auto;
+    font-size: 20px;
+    word-wrap: break-word;
+    text-overflow: ellipsis;
+    text-align:justify;
+}
+.text img {
+   
+    align-items: center;
+    width: 95%;
+    
 }
